# squid

./: .gitignore  CLAUDE.md  PKGBUILD  README.md  pyproject.toml
src/squid/: __init__.py  __main__.py  app.py  config.py
src/squid/api/: __init__.py  auth.py  cache.py  client.py  models.py
src/squid/keybindings/: __init__.py  bindings.py  command_parser.py
src/squid/player/: __init__.py  backend.py  queue.py  state.py  stream.py
src/squid/styles/: app.tcss
src/squid/views/: __init__.py  library.py  now_playing.py  playlist.py  queue_view.py  search.py  settings.py
src/squid/widgets/: __init__.py  artist_tree.py  command_line.py  playbar.py  progress_bar.py  resizable_header.py  splitter.py  status_bar.py  track_list.py  visualizer.py  volume_slider.py
tests/: __init__.py  test_keybindings.py  test_models.py  test_queue.py  test_state.py  test_ui.py
