[project]
name = "squid"
version = "0.1.0"
description = "A CMUS-inspired terminal frontend for YouTube Music"
readme = "README.md"
requires-python = ">=3.11"
license = "MIT"
authors = [
    { name = "Ben" }
]
keywords = ["youtube-music", "tui", "terminal", "music-player", "cmus"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Console",
    "Intended Audience :: End Users/Desktop",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Multimedia :: Sound/Audio :: Players",
]

dependencies = [
    "textual>=0.89.0",
    "ytmusicapi>=1.11.0",
    "yt-dlp>=2024.1.0",
    "python-mpv>=1.0.6",
    "pydantic>=2.9.0",
    "httpx>=0.27.0",
    "aiosqlite>=0.20.0",
    "platformdirs>=4.3.0",
    "structlog>=24.4.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.24.0",
    "pytest-cov>=5.0.0",
    "ruff>=0.6.0",
    "mypy>=1.11.0",
]

[project.scripts]
squid = "squid.__main__:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/squid"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]

[tool.mypy]
python_version = "3.11"
strict = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
